* 2011 update
  - macosx/libnk2.pmproj

Optimizations:
* map (file offset and size) items and item values first read on demand ?
* pre allocate item array entries

library
* additional value type support functions
  - filetime
* what about multiple alias entries 0x6001 of a single item?
  - they are set in values table but identifier lookup will return first only
* local library support
* implement an alternative solution for sizeof( size_t ) == 8 ?

Tools
* add signal handling
* nk2export
  - add export mode like pffexport
  - export alias files instead of item values
  - export to CSV/TSV, HTML, XML
* nk2info

Test:
* add autoconf/make test suite

Beta release
* have automated test suite
* remove deprecated functions in libnk2_legacy.[ch]
* remove deprecated definition in include/libnk2/mapi.h
* update man pages
* add documentation
* check inclusion of local libraries

Bindings:
* python
* .net
* java

20110706
* code clean up
* updated msvscpp files, added VSDebug
* updated nk2tools/log_handle.[ch]
* added open_close example
* worked on automated test
* added value_identifier initialize and free functions
* added codepage functionality to info handle

20110705
* refactored nk2export and export handle
* nk2export added quiet option
* updated libnk2.c
* added libnk2_unused.h
* updated README.mingw
* updated libfmapi

20110704
* updated configure
* added gettext support
* 2011 update
* updated common, array type,
* updated libcstring, liberror, libnotify, libsystem, libuna, libbfio,
  libfdatetime, libfguid, libfvalue, libfmapi, libfwnt
* code clean up
  - corrected indentation of LIBNK2_EXTERN
  - added info handle, refactored nk2info
  - added nk2tools_libnk2.h, refactored nk2tools
  - updated nk2input.[ch]
* added system codepage functions

20101119
* added local library support to libnk2_extern.h

20101113
* textual changes
* updated libfmapi
* updated nk2input.c

20101111
* updated configure.ac
* updated include/error.h, include/types.h
* updated array type