@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libnk2],
- [20110706],
+ [20110717],
  [jbmetz@users.sourceforge.net])
 
 AC_CONFIG_SRCDIR(
